5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1644_2703.log
== TEST (2019-04-09 16:50:46) 
-- CODE:
idade+int(input("qual a idade: "))
if (idade>=18):
	mensagem"eleitor"
	
	else:
		mensagem"eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 3
    mensagem"eleitor"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:35) 
-- CODE:
idade+int(input("qual a idade: "))
if (idade>=18):
	mensagem"eleitor"
	
	else:
		mensagem" nao eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 3
    mensagem"eleitor"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:44) 
-- CODE:
idade+int(input("qual a idade: "))
if (idade>=18):
	 mensagem"eleitor"
	
	else:
		mensagem" nao eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 3
    mensagem"eleitor"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:48) 
-- CODE:
idade+int(input("qual a idade: "))
if (idade>=18):
	 mensagem"eleitor"
	
	else:
		mensagem" nao eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 3
    mensagem"eleitor"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:52) 
-- CODE:
idade+int(input("qual a idade: "))
if (idade>=18):
	   mensagem"eleitor"
	
	else:
		mensagem" nao eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 3
    mensagem"eleitor"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:04) 
-- CODE:
idade+int(input("qual a idade: "))
if (idade>=18):
	   mensagem"eleitor"
		else:
		mensagem" nao eleitor"
print(mensagem.lower())
-- ERROR:
File "XXXX", line 3
    mensagem"eleitor"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:55) 
-- CODE:
idade=int(input("qual a idade: "))
if (idade>=18):
	mensagem"eleitor"
	   
-- ERROR:
File "XXXX", line 3
    mensagem"eleitor"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:53:55) 
-- CODE:
idade=int(input("qual a idade: "))
if (idade>=18):
	mensagem"eleitor"
else:
	mensagem"nao_eleitor"
print(mensagem.lower())
	   
-- ERROR:
File "XXXX", line 3
    mensagem"eleitor"
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:54:34) 
-- CODE:
idade=int(input("qual a idade: "))
if (idade>=18):
	mensagem="eleitor"
else:
	mensagem="nao_eleitor"
print(mensagem.lower())
	   
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:54:42) 
-- CODE:
idade=int(input("qual a idade: "))
if (idade>=18):
	mensagem="eleitor"
else:
	mensagem="nao_eleitor"
print(mensagem.lower())
	   
-- EXECUTION TIME:
0.188462
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
